force-app/main/default/objects/Account/fields/Contact_Channel__c.field-meta.xml
<CustomField>
    <fullName>Contact_Channel__c</fullName>
    <label>Contact Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>