force-app/main/default/objects/Account/fields/Coverage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date__c</fullName>
    <label>Coverage Start Date</label>
    <type>Date</type>
</CustomField>