force-app/main/default/objects/Account/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <label>Last Contact Date</label>
    <type>DateTime</type>
</CustomField>