force-app/main/default/objects/Account/fields/Network_Attorney_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Network_Attorney_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Network Attorney Assigned</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>