force-app/main/default/objects/Account/fields/Next_Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Followup_Date__c</fullName>
    <label>Next Followup Date</label>
    <type>Date</type>
</CustomField>