force-app/main/default/objects/Account/fields/Response_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Hours__c</fullName>
    <label>Response Time Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>